Fix blog post covers

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -167,6 +167,11 @@ a {
         }
     }
 
+    &.not-dimmed section {
+            background-color: transparent;
+            background-image: none;
+        }
+
     h1 {
         font-size:2.7em;
         line-height:1.4em;
